@@ -22,13 +22,17 @@ package org.killbill.billing.invoice.api.user;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
+import javax.inject.Inject;
 
 import org.joda.time.LocalDate;
 import org.killbill.billing.ErrorCode;
@@ -67,6 +71,7 @@ import org.killbill.billing.invoice.template.HtmlInvoice;
 import org.killbill.billing.invoice.template.HtmlInvoiceGenerator;
 import org.killbill.billing.payment.api.PluginProperty;
 import org.killbill.billing.tag.TagInternalApi;
+import org.killbill.billing.util.Preconditions;
 import org.killbill.billing.util.UUIDs;
 import org.killbill.billing.util.api.AuditLevel;
 import org.killbill.billing.util.api.TagApiException;
@@ -74,6 +79,7 @@ import org.killbill.billing.util.audit.AuditLogWithHistory;
 import org.killbill.billing.util.callcontext.CallContext;
 import org.killbill.billing.util.callcontext.InternalCallContextFactory;
 import org.killbill.billing.util.callcontext.TenantContext;
+import org.killbill.billing.util.collect.Iterables;
 import org.killbill.billing.util.entity.Pagination;
 import org.killbill.billing.util.entity.dao.DefaultPaginationHelper.SourcePaginationBuilder;
 import org.killbill.billing.util.optimizer.BusOptimizer;
@@ -83,15 +89,8 @@ import org.killbill.bus.api.PersistentBus.EventBusException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+// FIXME-1615 : DefaultPaginationHelper
 import com.google.common.base.Function;
-import com.google.common.base.MoreObjects;
-import com.google.common.base.Preconditions;
-import com.google.common.base.Predicate;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Iterables;
-import com.google.inject.Inject;
 
 import static org.killbill.billing.util.entity.dao.DefaultPaginationHelper.getEntityPaginationNoException;
 
@@ -134,23 +133,19 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
     }
 
     private static List<InvoiceItem> negateCreditItems(final List<InvoiceItem> input) {
-        final Iterable<InvoiceItem> tmp = Iterables.transform(input, new Function<InvoiceItem, InvoiceItem>() {
-            @Override
-            public InvoiceItem apply(final InvoiceItem creditItem) {
-                return new CreditAdjInvoiceItem(creditItem.getId(),
-                                                creditItem.getCreatedDate(),
-                                                creditItem.getInvoiceId(),
-                                                creditItem.getAccountId(),
-                                                creditItem.getStartDate(),
-                                                creditItem.getDescription(),
-                                                creditItem.getAmount().negate(),
-                                                creditItem.getRate(),
-                                                creditItem.getCurrency(),
-                                                creditItem.getQuantity(),
-                                                creditItem.getItemDetails());
-            }
-        });
-        return ImmutableList.copyOf(tmp);
+        return input.stream()
+                    .map(creditItem -> new CreditAdjInvoiceItem(creditItem.getId(),
+                                                                creditItem.getCreatedDate(),
+                                                                creditItem.getInvoiceId(),
+                                                                creditItem.getAccountId(),
+                                                                creditItem.getStartDate(),
+                                                                creditItem.getDescription(),
+                                                                creditItem.getAmount().negate(),
+                                                                creditItem.getRate(),
+                                                                creditItem.getCurrency(),
+                                                                creditItem.getQuantity(),
+                                                                creditItem.getItemDetails()))
+                    .collect(Collectors.toUnmodifiableList());
     }
 
     @Override
@@ -168,6 +163,13 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
     public List<Invoice> getInvoicesByAccount(final UUID accountId, final LocalDate fromDate, final LocalDate upToDate, final boolean includeVoidedInvoices, final TenantContext context) {
         final InternalTenantContext internalTenantContext = internalCallContextFactory.createInternalTenantContext(accountId, context);
         final List<InvoiceModelDao> invoicesByAccount = dao.getInvoicesByAccount(includeVoidedInvoices, fromDate, upToDate, internalTenantContext);
+        return fromInvoiceModelDao(invoicesByAccount, getCatalogSafelyForPrettyNames(internalTenantContext));
+    }
+
+    @Override
+    public List<Invoice> getInvoicesByGroup(final UUID accountId, final UUID groupId, final TenantContext context) {
+        final InternalTenantContext internalTenantContext = internalCallContextFactory.createInternalTenantContext(accountId, context);
+        final List<InvoiceModelDao> invoicesByAccount = dao.getInvoicesByGroup(groupId, internalTenantContext);
         return fromInvoiceModelDao(invoicesByAccount, getCatalogSafelyForPrettyNames(internalTenantContext));
     }
 
@@ -192,6 +194,7 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                                       return dao.get(offset, limit, internalCallContextFactory.createInternalTenantContextWithoutAccountRecordId(context));
                                                   }
                                               },
+                                              // FIXME-1615 : DefaultPaginationHelper
                                               new Function<InvoiceModelDao, Invoice>() {
                                                   @Override
                                                   public Invoice apply(final InvoiceModelDao invoiceModelDao) {
@@ -211,6 +214,7 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                                       return dao.searchInvoices(searchKey, offset, limit, internalCallContextFactory.createInternalTenantContextWithoutAccountRecordId(context));
                                                   }
                                               },
+                                              // FIXME-1615 : DefaultPaginationHelper
                                               new Function<InvoiceModelDao, Invoice>() {
                                                   @Override
                                                   public Invoice apply(final InvoiceModelDao invoiceModelDao) {
@@ -272,20 +276,32 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
     public Invoice triggerDryRunInvoiceGeneration(final UUID accountId, final LocalDate targetDate, final DryRunArguments dryRunArguments, final CallContext context) throws InvoiceApiException {
         final InternalCallContext internalContext = internalCallContextFactory.createInternalCallContext(accountId, context);
 
-        final Invoice result = dispatcher.processAccount(true, accountId, targetDate, dryRunArguments, false, internalContext);
-        if (result == null) {
+        final List<Invoice> result = dispatcher.processAccount(true, accountId, targetDate, dryRunArguments, false, false, internalContext);
+        if (result.isEmpty()) {
             throw new InvoiceApiException(ErrorCode.INVOICE_NOTHING_TO_DO, accountId, targetDate != null ? targetDate : "null");
         } else {
-            return result;
+            Preconditions.checkState(result.size() == 1);
+            return result.get(0);
         }
     }
 
     @Override
     public Invoice triggerInvoiceGeneration(final UUID accountId, @Nullable final LocalDate targetDate, final CallContext context) throws InvoiceApiException {
         final InternalCallContext internalContext = internalCallContextFactory.createInternalCallContext(accountId, context);
+        final List<Invoice> result = dispatcher.processAccount(true, accountId, targetDate, null, false, false, internalContext);
+        if (result.isEmpty()) {
+            throw new InvoiceApiException(ErrorCode.INVOICE_NOTHING_TO_DO, accountId, targetDate != null ? targetDate : "null");
+        } else {
+            Preconditions.checkState(result.size() == 1);
+            return result.get(0);
+        }
+    }
 
-        final Invoice result = dispatcher.processAccount(true, accountId, targetDate, null, false, internalContext);
-        if (result == null) {
+    @Override
+    public Iterable<Invoice> triggerInvoiceGroupGeneration(final UUID accountId, final LocalDate targetDate, final CallContext context) throws InvoiceApiException {
+        final InternalCallContext internalContext = internalCallContextFactory.createInternalCallContext(accountId, context);
+        final List<Invoice> result = dispatcher.processAccount(true, accountId, targetDate, null, false, true, internalContext);
+        if (result.isEmpty()) {
             throw new InvoiceApiException(ErrorCode.INVOICE_NOTHING_TO_DO, accountId, targetDate != null ? targetDate : "null");
         } else {
             return result;
@@ -335,9 +351,9 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                                    final boolean autoCommit,
                                                    final Iterable<PluginProperty> originalProperties,
                                                    final CallContext context) throws InvoiceApiException {
-        final LinkedList<PluginProperty> properties = new LinkedList<PluginProperty>();
+        final LinkedList<PluginProperty> properties = new LinkedList<>();
         if (originalProperties != null) {
-            properties.addAll(ImmutableList.<PluginProperty>copyOf(originalProperties));
+            originalProperties.forEach(properties::add);
         }
         return insertItems(accountId, effectiveDate, InvoiceItemType.EXTERNAL_CHARGE, charges, autoCommit, properties, context);
     }
@@ -349,9 +365,9 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                             final boolean autoCommit,
                                             final Iterable<PluginProperty> originalProperties,
                                             final CallContext context) throws InvoiceApiException {
-        final LinkedList<PluginProperty> properties = new LinkedList<PluginProperty>();
+        final LinkedList<PluginProperty> properties = new LinkedList<>();
         if (originalProperties != null) {
-            properties.addAll(ImmutableList.<PluginProperty>copyOf(originalProperties));
+            originalProperties.forEach(properties::add);
         }
 
         return insertItems(accountId, effectiveDate, InvoiceItemType.TAX, taxItems, autoCommit, properties, context);
@@ -363,7 +379,7 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
         if (creditItem == null) {
             throw new InvoiceApiException(ErrorCode.INVOICE_NO_SUCH_CREDIT, creditId);
         }
-        return negateCreditItems(ImmutableList.of(creditItem)).get(0);
+        return negateCreditItems(List.of(creditItem)).get(0);
     }
 
     @Override
@@ -373,9 +389,9 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                            final boolean autoCommit,
                                            final Iterable<PluginProperty> originalProperties,
                                            final CallContext context) throws InvoiceApiException {
-        final LinkedList<PluginProperty> properties = new LinkedList<PluginProperty>();
+        final LinkedList<PluginProperty> properties = new LinkedList<>();
         if (originalProperties != null) {
-            properties.addAll(ImmutableList.<PluginProperty>copyOf(originalProperties));
+            originalProperties.forEach(properties::add);
         }
 
         final List<InvoiceItem> items = insertItems(accountId, effectiveDate, InvoiceItemType.CREDIT_ADJ, creditItems, autoCommit, properties, context);
@@ -431,22 +447,22 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                     invoice.addInvoiceItem(adjustmentItem);
                 }
 
-                return ImmutableList.<DefaultInvoice>of(invoice);
+                return List.<DefaultInvoice>of(invoice);
             }
         };
 
-        final LinkedList<PluginProperty> properties = new LinkedList<PluginProperty>();
+        final LinkedList<PluginProperty> properties = new LinkedList<>();
+
         if (originalProperties != null) {
-            properties.addAll(ImmutableList.<PluginProperty>copyOf(originalProperties));
+            originalProperties.forEach(properties::add);
         }
 
-        final Collection<InvoiceItem> adjustmentInvoiceItems = Collections2.<InvoiceItem>filter(invoiceApiHelper.dispatchToInvoicePluginsAndInsertItems(accountId, false, withAccountLock, properties, context),
-                                                                                                new Predicate<InvoiceItem>() {
-                                                                                                    @Override
-                                                                                                    public boolean apply(final InvoiceItem invoiceItem) {
-                                                                                                        return InvoiceItemType.ITEM_ADJ.equals(invoiceItem.getInvoiceItemType());
-                                                                                                    }
-                                                                                                });
+        final Collection<InvoiceItem> dispatchedInvoiceItems = invoiceApiHelper.dispatchToInvoicePluginsAndInsertItems(accountId, false, withAccountLock, properties, context);
+
+        final Collection<InvoiceItem> adjustmentInvoiceItems = dispatchedInvoiceItems.stream()
+                .filter(invoiceItem -> InvoiceItemType.ITEM_ADJ.equals(invoiceItem.getInvoiceItemType()))
+                .collect(Collectors.toUnmodifiableList());
+
         Preconditions.checkState(adjustmentInvoiceItems.size() <= 1, "Should have created a single adjustment item: " + adjustmentInvoiceItems);
 
         return adjustmentInvoiceItems.iterator().hasNext() ? adjustmentInvoiceItems.iterator().next() : null;
@@ -488,34 +504,30 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
         final InternalCallContext internalCallContext = internalCallContextFactory.createInternalCallContext(accountId, context);
         final LocalDate invoiceDate = internalCallContext.toLocalDate(internalCallContext.getCreatedDate());
         final InvoiceModelDao migrationInvoice = new InvoiceModelDao(accountId, invoiceDate, targetDate, items.iterator().next().getCurrency(), true);
+        final List<InvoiceItemModelDao> itemModelDaos = Iterables.toStream(items)
+                .map(input -> new InvoiceItemModelDao(internalCallContext.getCreatedDate(),
+                                                      input.getInvoiceItemType(),
+                                                      migrationInvoice.getId(),
+                                                      accountId,
+                                                      input.getBundleId(),
+                                                      input.getSubscriptionId(),
+                                                      input.getDescription(),
+                                                      input.getProductName(),
+                                                      input.getPlanName(),
+                                                      input.getPhaseName(),
+                                                      input.getUsageName(),
+                                                      input.getCatalogEffectiveDate(),
+                                                      input.getStartDate(),
+                                                      input.getEndDate(),
+                                                      input.getAmount(),
+                                                      input.getRate(),
+                                                      input.getCurrency(),
+                                                      input.getLinkedItemId()))
+                .collect(Collectors.toUnmodifiableList());
 
-        final List<InvoiceItemModelDao> itemModelDaos = ImmutableList.copyOf(Iterables.transform(items, new Function<InvoiceItem, InvoiceItemModelDao>() {
-            @Override
-            public InvoiceItemModelDao apply(final InvoiceItem input) {
-                return new InvoiceItemModelDao(internalCallContext.getCreatedDate(),
-                                               input.getInvoiceItemType(),
-                                               migrationInvoice.getId(),
-                                               accountId,
-                                               input.getBundleId(),
-                                               input.getSubscriptionId(),
-                                               input.getDescription(),
-                                               input.getProductName(),
-                                               input.getPlanName(),
-                                               input.getPhaseName(),
-                                               input.getUsageName(),
-                                               input.getCatalogEffectiveDate(),
-                                               input.getStartDate(),
-                                               input.getEndDate(),
-                                               input.getAmount(),
-                                               input.getRate(),
-                                               input.getCurrency(),
-                                               input.getLinkedItemId());
-
-            }
-        }));
         migrationInvoice.addInvoiceItems(itemModelDaos);
 
-        dao.createInvoices(ImmutableList.<InvoiceModelDao>of(migrationInvoice), null, ImmutableSet.of(), internalCallContext);
+        dao.createInvoices(List.of(migrationInvoice), null, Collections.emptySet(), null, null, false, internalCallContext);
         return migrationInvoice.getId();
     }
 
@@ -608,7 +620,7 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                                                            inputItem.getPrettyPlanName(),
                                                                            inputItem.getPrettyPhaseName(),
                                                                            inputItem.getDescription(),
-                                                                           MoreObjects.firstNonNull(inputItem.getStartDate(), effectiveDate),
+                                                                           Objects.requireNonNullElse(inputItem.getStartDate(), effectiveDate),
                                                                            inputItem.getEndDate(),
                                                                            inputItem.getAmount(),
                                                                            inputItem.getRate(),
@@ -639,7 +651,7 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                                                                 accountId,
                                                                 inputItem.getBundleId(),
                                                                 inputItem.getDescription(),
-                                                                MoreObjects.firstNonNull(inputItem.getStartDate(), effectiveDate),
+                                                                Objects.requireNonNullElse(inputItem.getStartDate(), effectiveDate),
                                                                 inputItem.getAmount(),
                                                                 accountCurrency);
                             break;
@@ -673,7 +685,6 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
         return invoices;
     }
 
-
     @Override
     public void commitInvoice(final UUID invoiceId, final CallContext context) throws InvoiceApiException {
         final WithAccountLock withAccountLock = new WithAccountLock() {
@@ -684,7 +695,7 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                 dao.changeInvoiceStatus(invoiceId, InvoiceStatus.COMMITTED, internalCallContext);
                 final DefaultInvoice invoice = getInvoiceInternal(invoiceId, context);
                 dispatcher.setChargedThroughDates(invoice, internalCallContext);
-                return ImmutableList.<DefaultInvoice>of(invoice);
+                return List.of(invoice);
             }
         };
 
@@ -723,15 +734,11 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
     @Override
     public List<InvoiceItem> getInvoiceItemsByParentInvoice(final UUID parentInvoiceId, final TenantContext context) throws InvoiceApiException {
         final InternalTenantContext internalTenantContext = internalCallContextFactory.createInternalTenantContext(parentInvoiceId, ObjectType.INVOICE, context);
-
         final VersionedCatalog catalog = getCatalogSafelyForPrettyNames(internalTenantContext);
-        return ImmutableList.copyOf(Collections2.transform(dao.getInvoiceItemsByParentInvoice(parentInvoiceId, internalTenantContext),
-                                                           new Function<InvoiceItemModelDao, InvoiceItem>() {
-                                                               @Override
-                                                               public InvoiceItem apply(final InvoiceItemModelDao input) {
-                                                                   return InvoiceItemFactory.fromModelDaoWithCatalog(input, catalog);
-                                                               }
-                                                           }));
+        final List<InvoiceItemModelDao> invoiceItems = dao.getInvoiceItemsByParentInvoice(parentInvoiceId, internalTenantContext);
+        return invoiceItems.stream()
+                .map(input -> InvoiceItemFactory.fromModelDaoWithCatalog(input, catalog))
+                .collect(Collectors.toUnmodifiableList());
     }
 
     private VersionedCatalog getCatalogSafelyForPrettyNames(final InternalTenantContext internalTenantContext) {
@@ -753,16 +760,12 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
 
     private void checkInvoiceDoesContainUsedGeneratedCredit(final UUID accountId, final InvoiceModelDao invoice, final CallContext context) throws InvoiceApiException {
         final BigDecimal accountCBA = dao.getAccountCBA(accountId, internalCallContextFactory.createInternalTenantContext(accountId, context));
-        final InvoiceItemModelDao largeCreditGen = Iterables.tryFind(invoice.getInvoiceItems(), new Predicate<InvoiceItemModelDao>() {
-            @Override
-            public boolean apply(final InvoiceItemModelDao invoiceItemModelDao) {
-                // Positive CBA
-                return InvoiceItemType.CBA_ADJ == invoiceItemModelDao.getType() && /* CBA item */
-                       invoiceItemModelDao.getAmount().compareTo(BigDecimal.ZERO) > 0 && /* Credit generation */
-                       invoiceItemModelDao.getAmount().compareTo(accountCBA) > 0; /* Some of it was used already */
-            }
-        }).orNull();
-        if (largeCreditGen != null) {
+        final boolean largeCreditGenExist = invoice.getInvoiceItems().stream()
+                .anyMatch(invoiceItemModelDao -> /* Positive CBA */
+                                  InvoiceItemType.CBA_ADJ == invoiceItemModelDao.getType() && /* CBA item */
+                                  invoiceItemModelDao.getAmount().compareTo(BigDecimal.ZERO) > 0 && /* Credit generation */
+                                  invoiceItemModelDao.getAmount().compareTo(accountCBA) > 0 /* Some of it was used already */);
+        if (largeCreditGenExist) {
             // TODO ErrorCode https://github.com/killbill/killbill/issues/1501
             throw new IllegalStateException(String.format("Cannot void invoice %s because it contains credit items (credit generation)", invoice.getId()));
         }
@@ -788,10 +791,9 @@ public class DefaultInvoiceUserApi implements InvoiceUserApi {
                 dao.changeInvoiceStatus(invoiceId, InvoiceStatus.VOID, internalCallContext);
 
                 final DefaultInvoice invoice = getInvoiceInternal(invoiceId, context);
-                return ImmutableList.of(invoice);
+                return List.of(invoice);
             }
         };
-
 
         final LinkedList<PluginProperty> properties = new LinkedList<PluginProperty>();
         properties.add(new PluginProperty(INVOICE_OPERATION, "void", false));
